--- a/pre-build/scss/common/media.scss
+++ b/pre-build/scss/common/media.scss
@@ -299,119 +299,114 @@
 
 @media (prefers-color-scheme: light) {
     body{
+        /* bg */
         --d-bg-body: #fff;
         --d-bg-left-menu:#f5f5f5;
-        --d-c-title: #202020;
-        --d-c-main-txt: #333;
-        --d-c-left-menu-depth: #333;
-        --d-c-at-left-menu-depth: #266bf7;
-        --dis-c-left-menu-dep2: #ccc;
-        --d-c-at-more-sub-menu: #202020;
-        --d-bg-left-menu-dep1: #707070;
         --d-bg-left-menu-dep2: #eee;
-        --d-bdc-left-menu: rgba(0, 0, 18, 0.08);
         --d-bg-at-more-sub-menu: #f3f4f5;
         --d-bg-hv-more-sub-menu-item: rgba(204, 204, 204, 0.8);
         --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
         --d-bg-pop: #fff;
-        --d-c-pop: #222;
-        --d-bdc: #ddd;
+        --bg-tb-th: #f5f5f5;
+        --d-bg-skeleton: #dee2e6;
+        --bg-showHideBox:rgba(243,244,245,0.8);
+
+        /* color */
+        --d-c-text: #202020;
+        
+        /* primary & common */
+        --primary: #266bf7;
+        --primary-type02: #266bf7;
+        --primary-type03: #1694d2;
+        --black-white: #000;
+        --ddd-black21: #ddd;
+        --c-333-white: #333;
+
+        /* sc */
         --d-sc-thumb: #ccc;
         --d-sc-track: #e9e9e9;
         --d-sc-hv-thumb: #b6b6b6;
         --d-sc-at-thumb: #808080;
-        --d-svg-current: #000;
-        --d-bg-input: #fff;
-        --d-c-input: #222;
-        --c-emphasis01: #266bf7;
-        --c-emphasis02: #1694d2;
-        --c-tab:#000;
-        --logo-light: inline-block;
-        --logo-dark: none;
-        --ico-light:inline-block;
-        --ico-dark: none;
-        --mark-dep3: rgba(32, 32, 32, 0.75);
-        --bdc-btt: #000;
-        --bg-hv-btt: #000;
-        --hv-svg-btt: #fff;
-        --ele-shadow: #ddd;
-        --bdc-input: #ddd;
-        --primary: #266bf7;
-        --d-key-focus: #000;
-        --d-fb-box: #000;
-        --d-bg-skeleton: #dee2e6;
-        --bg-chk: #fff;
+
+        /* pagination */
         --dis-bg-pagination: rgba(204,204,204,0.5);
         --bdc-hv-pagination: #000;
         --c-pagi-num:rgba(34, 34, 34, 0.5);
+
+        /* boardList */
         --bg-boardList-head: #ddd;
         --c-boardList-head: #3b3b3b;
         --bg-boardList-cont: rgba(243,244,245,0.8);
-        --c-boardList-cont: #333;
-        --bg-showHideBox:rgba(243,244,245,0.8);
-        --black-white: #000;
-        --c-333-white: #333;
-        --svg-fill-type01: #000;
+
+        /* input & select */
+        --d-bg-input: #fff;
+        --d-bg-select: #fff;
+        --bg-chk: #fff;
+
+        /* etc */
+        --d-bdc: #ddd;
+        --d-fb-box: #000;
+        --dis-c-left-menu-dep2: #ccc;
+        --img-light: inline-block;
+        --img-dark: none;
+        --mark-dep3: rgba(32, 32, 32, 0.75);
     }
 }
 
 
 @media (prefers-color-scheme: dark) {
     body{
+        /* bg */
         --d-bg-body: #181818;
         --d-bg-left-menu:#212121;
-        --d-c-title: rgba(242, 241, 241, 1);
-        --d-c-main-txt: #ececec;
-        --d-c-left-menu-depth: rgba(242, 241, 241, 1);
-        --d-c-at-left-menu-depth: rgba(89,148,241,1);
-        --dis-c-left-menu-dep2: #717171;
-        --d-c-at-more-sub-menu: rgba(242, 241, 241, 1);
-        --d-bg-left-menu-dep1: rgba(242, 241, 241, 1);
         --d-bg-left-menu-dep2: #1e1f21;
-        --d-bdc-left-menu: #3a3b3d;
         --d-bg-at-more-sub-menu: #2d2d2d;
-        --d-bg-hv-more-sub-menu-item: #53575C;
+        --d-bg-hv-more-sub-menu-item: #53575c;
         --d-bg-hv-util-area-circle: rgba(255,255,255,0.1);
         --d-bg-pop: #313131;
-        --d-c-pop: rgba(242, 241, 241, 1);
-        --d-bdc: #3a3b3d;
+        --bg-tb-th: #444;
+        --d-bg-skeleton: #2e2e2e;
+        --bg-showHideBox:#343434;
+
+        /* color */
+        --d-c-text: #fff;
+        
+        /* primary & common */
+        --primary: #2196F3;
+        --primary-type02: rgba(89,148,241,1);
+        --primary-type03: rgba(149,196,232,1);
+        --black-white: #fff;
+        --ddd-black21: #212121;
+        --c-333-white: #fff;
+
+        /* sc */
         --d-sc-thumb: #686868;
         --d-sc-track: #424242;
         --d-sc-hv-thumb: #7b7b7b;
         --d-sc-at-thumb: #b6b6b6;
-        --d-svg-current: #fff;
-        --d-bg-input: #333;
-        --d-c-input: #fff;
-        --c-emphasis01: rgba(89,148,241,1);
-        --c-emphasis02: rgba(149,196,232,1);
-        --c-tab:#ececec;
-        --logo-light: none;
-        --logo-dark: inline-block;
-        --ico-light: none;
-        --ico-dark: inline-block;
-        --mark-dep3: rgba(242, 241, 241, 1);
-        --bdc-btt: #fff;
-        --bg-hv-btt: #fff;
-        --hv-svg-btt: #000;
-        --d-svg-btt: #fff; //다크모드에서만 흰색
-        --ele-shadow: transparent;
-        --bdc-input: #a0a0a0;
-        --primary: #2196F3;
-        --d-key-focus: #fff;
-        --d-fb-box: #555;
-        --d-bg-skeleton: #2e2e2e;
-        --bg-chk: #333;
+
+        /* pagination */
         --dis-bg-pagination: #333;
         --bdc-hv-pagination: #999;
-        --c-pagi-num: #fff;
+        --c-pagi-num:#fff;
+
+        /* boardList */
         --bg-boardList-head: #333;
         --c-boardList-head: #fff;
         --bg-boardList-cont: #212121;
-        --c-boardList-cont: #fff;
-        --bg-showHideBox:#343434;
-        --black-white: #fff;
-        --c-333-white: rgba(242, 241, 241, 1);
-        --svg-fill-type01: #5994f1;
+
+        /* input & select */
+        --d-bg-input: #333;
+        --d-bg-select: #121212;
+        --bg-chk: #333;
+
+        /* etc */
+        --d-bdc: #3a3b3d;
+        --d-fb-box: #555;
+        --dis-c-left-menu-dep2: #717171;
+        --img-light: none;
+        --img-dark: inline-block;
+        --mark-dep3: rgba(242, 241, 241, 1);
     }
 }
 
