--- a/pre-build/scss/component/custom.scss
+++ b/pre-build/scss/component/custom.scss
@@ -8,7 +8,7 @@ border-radius:4px; background:#f5f5f5;
     }
 }
 
-.resultArea .inner .toolTipBox{position: relative; width: 150px; border: 1px solid $_222Bg; height: 150px;
+.resultArea .inner .toolTipBox{position: relative; width: 150px; border: 1px solid var(--c-333-white); height: 150px;
     &:hover{
         .exTooltip{opacity: 1; visibility: visible;}
     }
