--- a/pre-build/scss/component/layout.scss
+++ b/pre-build/scss/component/layout.scss
@@ -16,7 +16,9 @@
           }
         }
         .titleH3{margin-bottom: 0; padding-bottom: 10px;}
-        .centerBox{padding: 50px; border: 2px solid $blackBg; font-size: 1.38em; font-family: $d-fz;}
+        .centerBox{padding: 50px; border: 2px solid var(--c-333-white); font-size: 1.38em; font-family: $d-fz;
+          span{color: var(--c-333-white);}
+        }
       }
   
       &.bgImage{
@@ -195,7 +197,7 @@
       >.tabNav{margin-bottom: 15px;
         >.tabList{border-bottom: 2px solid var(--d-bdc); border-radius: 4px;
           >li{position: relative; flex: 1; height: 35px; line-height: 35px;font-size: 1.13em;
-          cursor: pointer; text-align: center; color: var(--c-tab); font-family: $d-fz;
+          cursor: pointer; text-align: center; color: var(--black-white); font-family: $d-fz;
             &.orange.active:before{background-color: #ed5e26;}
             &.pink.active:before{background-color: #cf649a;}
             &.blue.active:before{background-color: #2693cc;}
@@ -203,7 +205,7 @@
             &.active{font-weight: bold;
               &:before{content: ''; position: absolute; width: 100%; height: 3px; bottom: -1px; left: 0;}
             }
-            &:focus-visible{outline: 1.5px solid var(--d-key-focus);}
+            &:focus-visible{outline: 1.5px solid var(--black-white);}
           }
         }
       }
@@ -214,7 +216,7 @@
         >.tabList{display: flex;border: 1px solid $dddBg; border-radius: 4px; font-size: 1em; color: $c222;
           >li{position: relative; flex: 1; height: 50px; line-height: 50px; padding: 0 10px; cursor: pointer; 
           box-sizing: border-box; text-align: center; background-color: $cfff; font-family: $d-fz;
-            &.active{border-radius: 4px 0 0 4px; font-weight: bold;color: $cfff;background-color: $blueBg;
+            &.active{border-radius: 4px 0 0 4px; font-weight: bold;color: $cfff;background-color: var(--primary-type02);
               &:last-child{border-radius: 0 4px 4px 0;}
             }
           }
