--- a/pre-build/scss/scss-build/gnb.css
+++ b/pre-build/scss/scss-build/gnb.css
@@ -18,10 +18,10 @@
   top: 120px;
   width: 100%;
   height: 365px;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid var(--d-bdc);
   -webkit-box-shadow: -3px 3px 3px 0 rgba(0, 0, 0, 0.2);
           box-shadow: -3px 3px 3px 0 rgba(0, 0, 0, 0.2);
-  background-color: #fff;
+  background-color: var(--white-black21);
   z-index: 1000;
 }
 
@@ -48,7 +48,7 @@
   min-width: 80px;
   font-size: 1.5em;
   font-family: "Noto Sans";
-  color: #000;
+  color: var(--c-333-white);
 }
 
 .wrap.pre.gnbHover #gnb ul.menuList > li .depthTwo, .wrap.pre.gnb-li-hover #gnb ul.menuList > li .depthTwo, .wrap.pre.gnbFind #gnb ul.menuList > li .depthTwo {
@@ -66,7 +66,7 @@
   display: block;
   font-size: 1em;
   font-family: "Noto Sans";
-  color: #444;
+  color: var(--c-333-white);
 }
 
 .wrap.pre.gnbFind #gnb ul.menuList {
@@ -90,7 +90,7 @@
 }
 
 .wrap.pre.gnbFind #gnb ul.menuList li .depthTwo > li {
-  border: 1px solid #ddd;
+  border: 1px solid var(--d-bdc);
   border-top: 0;
   background-color: rgba(51, 51, 51, 0.8);
 }
